--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,7 +23,24 @@ a{
   text-decoration: none;
 }
 
+button {
+  padding: 8px;
+  border: 0;
+  background-color: rgba(93, 153, 243, 0.5);
+  color: black;
+  margin: 5px 5px 5px 5px;
+}
+
+button:hover {
+  box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.2);
+  font-weight: bold;
+}
+
 .navItem {
   padding: 8px;
   color: black;
+}
+
+.navItem:hover {
+  font-weight: bolder;
 }
