--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,6 +45,14 @@ button:hover {
   font-weight: bolder;
 }
 
+/* .home {
+  background-image: url("https://images.pexels.com/photos/167092/pexels-photo-167092.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  height: 100%;
+  padding-top: 125px;
+  padding-bottom: 125px;
+  background-position: left 20px;
+} */
+
 @media only screen and (max-width: 415px){
   h1{
     font-size: 25px;
